--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "minimist": "^1.2.5",
     "set-default-browser": "^1.1.1",
     "valid-url": "^1.0.9",
-    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
@@ -41,6 +40,7 @@
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^1.4.4",
     "webpack-dev-server": "^3.11.0",
-    "workbox-webpack-plugin": "^5.1.3"
+    "workbox-webpack-plugin": "^5.1.3",
+    "webpack": "^4.43.0"
   }
 }
