--- a/package.json
+++ b/package.json
@@ -48,3 +48,48 @@
     "workbox-webpack-plugin": "^5.1.3"
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+"dependencies": {
+  "babel-polyfill": "^6.26.0",
+  "body-parser": "^1.19.0",
+  "cors": "^2.8.5",
+  "dotenv": "^8.2.0",
+  "express": "^4.17.1",
+  "install": "^0.13.0",
+  "mini-css-extract-plugin": "^0.9.0",
+  "minimist": "^1.2.5",
+  "npm": "^6.14.7",
+  "set-default-browser": "^1.1.1",
+  "webpack-cli": "^3.3.12"
+},
+"devDependencies": {
+  "@babel/core": "^7.11.0",
+  "@babel/preset-env": "^7.11.0",
+  "babel-loader": "^8.1.0",
+  "clean-webpack-plugin": "^3.0.0",
+  "css-loader": "^3.6.0",
+  "file-loader": "^6.0.0",
+  "html-loader": "^1.1.0",
+  "html-webpack-plugin": "^3.2.0",
+  "jest": "^25.5.4",
+  "node-sass": "^4.14.0",
+  "optimize-css-assets-webpack-plugin": "^5.0.3",
+  "sass": "^1.26.10",
+  "sass-loader": "^8.0.2",
+  "style-loader": "^1.2.1",
+  "terser-webpack-plugin": "^2.3.5",
+  "webpack": "^4.44.1",
+  "webpack-dev-server": "^3.11.0",
+  "workbox-webpack-plugin": "^5.1.3"
+}
+}
